<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group1" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_amaliy"
            android:icon="@drawable/ic_library_books"
            android:title="@string/practical_materials" />
        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/ic_tests"
            android:title="@string/tests" />
        <item
            android:id="@+id/nav_glossary"
            android:icon="@drawable/ic_glossary"
            android:title="@string/glossary" />
        <item
            android:id="@+id/nav_adabiyot"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/bookmarks" />
    </group>

    <group android:id="@+id/group_about" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about_app" />
    </group>
</menu>