<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ui.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginStart="5dp"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_btn_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/toolbarName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/about_app"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-35dp"
        app:cardCornerRadius="35dp"
        app:contentPaddingBottom="35dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:fontFamily="@font/raleway_regular"
                    android:justificationMode="inter_word"
                    android:paddingVertical="10dp"
                    android:textStyle="bold"
                    android:text="@string/about_app_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    tools:targetApi="o" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/bg_card_admin"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:gravity="center_vertical"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:fontFamily="@font/raleway_bold"
                                android:padding="10dp"
                                android:paddingVertical="10dp"
                                android:text="@string/admin"
                                android:textColor="@color/colorPrimary"
                                android:textSize="20sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:gravity="center"
                                android:layout_height="wrap_content">

                                <com.airbnb.lottie.LottieAnimationView
                                    android:id="@+id/animationView"
                                    android:layout_width="50dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_height="50dp"
                                    app:lottie_rawRes="@raw/search"
                                    app:lottie_autoPlay="true"
                                    app:lottie_loop="true"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:drawablePadding="10dp"
                                    android:fontFamily="@font/raleway_regular"
                                    android:padding="10dp"
                                    android:paddingVertical="10dp"
                                    android:text="@string/occupation"
                                    android:textColor="@color/white"
                                    android:textSize="16sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:paddingVertical="10dp">

                                <com.airbnb.lottie.LottieAnimationView
                                    android:id="@+id/ownerPhone"
                                    android:layout_width="48dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_height="48dp"
                                    app:lottie_rawRes="@raw/call"
                                    android:background="@drawable/bg_communicate_icons"
                                    app:lottie_autoPlay="true"
                                    app:lottie_loop="true"/>

                                <com.airbnb.lottie.LottieAnimationView
                                    android:id="@+id/ownerEmail"
                                    android:layout_width="48dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_height="48dp"
                                    android:layout_marginHorizontal="10dp"
                                    app:lottie_rawRes="@raw/contact_mail"
                                    android:background="@drawable/bg_communicate_icons"
                                    app:lottie_autoPlay="true"
                                    app:lottie_loop="true"/>

                                <com.airbnb.lottie.LottieAnimationView
                                    android:id="@+id/ownerTelegram"
                                    android:layout_width="48dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_height="48dp"
                                    app:lottie_rawRes="@raw/telegram"
                                    android:background="@drawable/bg_communicate_icons"
                                    app:lottie_autoPlay="true"
                                    app:lottie_loop="true"/>

                            </LinearLayout>
                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="200dp"
                            android:layout_margin="10dp"
                            android:layout_weight="2"
                            app:cardCornerRadius="20dp"
                            app:cardElevation="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/app_name"
                                android:scaleType="centerCrop"
                                android:src="@drawable/img_admin" />

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>