<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.TestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_btn_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/toolbarName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/tests"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-35dp"
        app:cardCornerRadius="35dp"
        app:contentPaddingBottom="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/questionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_radio_button"
                    android:elevation="5dp"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center"
                    android:minHeight="200dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/app_name"
                    android:textSize="18sp" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:elevation="6dp">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:indeterminateOnly="false"
                        android:progress="30"
                        android:progressDrawable="@drawable/item_circle" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animationView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/test" />

                </FrameLayout>

            </FrameLayout>

            <RadioGroup
                android:id="@+id/optionsGroup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_radio_button"
                    android:elevation="2dp"
                    android:text="@string/app_name" />

                <RadioButton
                    android:id="@+id/option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bg_radio_button"
                    android:elevation="2dp"
                    android:text="@string/app_name" />

                <RadioButton
                    android:id="@+id/option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bg_radio_button"
                    android:elevation="2dp"
                    android:text="@string/app_name" />

                <RadioButton
                    android:id="@+id/option4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_radio_button"
                    android:elevation="2dp"
                    android:text="@string/app_name" />
            </RadioGroup>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/next" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>